// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";
option objc_class_prefix = "RTG";

package routeguide;

// Interface exported by the server.
service FitnessCenter {

  rpc RequestTrainingPlan(TrainingPlanRequest) returns (Confirmation) {}

  rpc RequestPhysioAppointment(AppointmentRequest) returns (Confirmation) {}

}


message Date {
  int32 day = 1;
  int32 month = 2;
  int32 year = 3;
  int32 hour = 4;
  int32 minutes = 5;
}


message TrainingPlanRequest {
  string member_id = 1;
  Date date = 2;
}

message AppointmentRequest {
  string member_id = 1;
  Date date = 2;
  string note = 3;
}

message Confirmation {
  int32 code = 1;
  string description = 2;
}
